
2023-02-19  Ron Norman <rjn@inglenet.com>

	* move.c: For large fields use 'cob_decimal_setget_fld'
	* numeric.c: Added support for large BINARY/COMP-X/COMP-N 
	* termio.c: Updated 'bin_digits' table for larger fields
	* common.h: Removed  define  COB_MAX_COMPX

2023-01-21  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (internal_nanosleep): fix missing identifier (broken merge)

2023-01-15  Ron Norman <rjn@inglenet.com>

	* screenio.c: renamed max_pairs_available as this is defined on HPUX
	* common.c (check_current_date): fixed bad snprintf size

2022-12-08  Ron Norman <rjn@inglenet.com>

	* call.c: For AIX, use RTLD_MEMBER to dlopen shared code from archive

2022-12-02  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c: fix mishandled "extended attributes" (bit 4)

2022-11-26  Ron Norman <rjn@inglenet.com>

	* fileio.c,fisam.c: Add code to handle ISAM index compression settings

2022-11-25  Ron Norman <rjn@inglenet.com>

	* fisam.c: Updated to better replicate MF COBOL behaviour
	  in relation to START ... READ NEXT/PREVIOUS

2022-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c: fixed compiler warnings related to get_crt3_status

2022-11-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Preliminary implemenation of support for the
	  COB_FILENAME_SPACES option (default TRUE, checking option to disable).
	  If the name in ASSIGN variable starts with double quote then
	  trailing spaces are included in file name 
	  If the name in ASSIGN variable has invalid data status 9/004

2022-11-04  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c [__PDCURSES__]: drop use of PDC_free_memory_allocations
	  as testing showed it raising memory errors and the function was
	  removed in PDCursesMod

2022-10-31  Ron Norman <rjn@inglenet.com>

	* common.c: Only redo 'raise (sig)' if a core dupm is wanted
	* common.h: Add cob_symbol type of SYM_ADRS_VARY

2022-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* statement.def: added STMT_PRESENT_WHEN
