@@ -1,4 +1,8 @@
 
+2023-02-20  Ron Norman <rjn@inglenet.com>
+
+	* numeric.c: Changes for a small speed up of COMP-3 handling
+
 2023-02-19  Ron Norman <rjn@inglenet.com>
 
 	* move.c: For large fields use 'cob_decimal_setget_fld'
